force-app/main/default/objects/ORC_Requisition__c/ORC_Requisition__c.object-meta.xml
<CustomObject>
    <description>Used by UiPath for syncing this data to Oracle.
1:1 mapping the Job Record</description>
    <label>Requisition</label>
    <nameField>
        <displayFormat>Requisition - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>