force-app/main/default/objects/ORC_Requisition__c/fields/Automatically_Fill_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Fill_Requisition__c</fullName>
    <inlineHelpText>Default &quot;Yes&quot;</inlineHelpText>
    <label>Automatically Fill Requisition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>