force-app/main/default/objects/ORC_Requisition__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business Unit associated with the Requisition. Pulled from Job.Business Unit India</description>
    <inlineHelpText>Business Unit associated with the Requisition. Pulled from Job.Business Unit India</inlineHelpText>
    <label>Business Unit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>