force-app/main/default/objects/ORC_Requisition__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Candidate on the Requisition. Related by Job.Engagement.Placed Candidate</description>
    <inlineHelpText>Related Candidate on the Requisition. Related by Job.Engagement.Placed Candidate</inlineHelpText>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requisitions</relationshipLabel>
    <relationshipName>Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>