force-app/main/default/objects/ORC_Requisition__c/fields/Candidate_Selection_Process__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Selection_Process__c</fullName>
    <defaultValue>&quot;CSP_RD&quot;</defaultValue>
    <inlineHelpText>Internal Code. Default = &quot;CSP_RD&quot;</inlineHelpText>
    <label>Candidate Selection Process</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>