force-app/main/default/objects/ORC_Requisition__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Client related to Job</description>
    <inlineHelpText>Client related to Job. Pulled from Job.End Client</inlineHelpText>
    <label>Client Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>