force-app/main/default/objects/ORC_Requisition__c/fields/Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary__c</fullName>
    <label>Current Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>