force-app/main/default/objects/ORC_Requisition__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Combine Vertical and Sub Vertical using the &gt;&gt; character</description>
    <formula>Vertical__c &amp; &quot; &gt;&gt; &quot; &amp;  Sub_Vertical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combine Vertical and Sub Vertical using the &gt;&gt; character</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>