force-app/main/default/objects/ORC_Requisition__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>Placed Candidate Email Address</description>
    <inlineHelpText>Placed Candidate Email Address</inlineHelpText>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>