force-app/main/default/objects/ORC_Requisition__c/fields/External_Application_Flow__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Flow__c</fullName>
    <defaultValue>&quot;Initial Application - RS_IP&quot;</defaultValue>
    <inlineHelpText>Internal Use. Default Value = &quot;Initial Application - RS_IP&quot;</inlineHelpText>
    <label>External Application Flow</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>