force-app/main/default/objects/ORC_Requisition__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <defaultValue>&quot;Budgeted&quot;</defaultValue>
    <description>Default Value = &quot;Budgeted&quot;</description>
    <inlineHelpText>Default Value = &quot;Budgeted&quot;</inlineHelpText>
    <label>Headcount</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>