force-app/main/default/objects/ORC_Requisition__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <description>Job&apos;s Hiring Manager Email</description>
    <inlineHelpText>Job&apos;s Hiring Manager Email.Pulled from Job.Reporting Manager Email</inlineHelpText>
    <label>Hiring Manager</label>
    <required>true</required>
    <type>Email</type>
</CustomField>