force-app/main/default/objects/ORC_Requisition__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <inlineHelpText>Job Designation. Pulled from Job.Demand Role</inlineHelpText>
    <label>Job</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>