force-app/main/default/objects/ORC_Requisition__c/fields/Job_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Salesforce_ID__c</fullName>
    <description>Job 18 Digit Salesforce ID</description>
    <inlineHelpText>Job 18 Digit Salesforce ID</inlineHelpText>
    <label>Job Salesforce ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>