force-app/main/default/objects/ORC_Requisition__c/fields/Legal_Employer__c.field-meta.xml
<CustomField>
    <fullName>Legal_Employer__c</fullName>
    <defaultValue>&quot;Randstad Digital Talent Center Pvt Ltd&quot;</defaultValue>
    <description>Identifies the legally recognized entity for compliance. Default = &quot;Randstad Digital Talent Center Pvt Ltd&quot;</description>
    <inlineHelpText>Identifies the legally recognized entity for compliance. Default = &quot;Randstad Digital Talent Center Pvt Ltd&quot;</inlineHelpText>
    <label>Legal Employer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>