force-app/main/default/objects/ORC_Requisition__c/fields/Number_of_Openings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Openings__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of open positions on Job. Default is 1</description>
    <inlineHelpText>Number of open positions on Job. Default is 1</inlineHelpText>
    <label>Number of Openings</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>