force-app/main/default/objects/ORC_Requisition__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <defaultValue>&quot;Randstad India Private Limited&quot;</defaultValue>
    <description>Parent Organization for Job. Default is &quot;Randstad India Private Limited&quot;</description>
    <inlineHelpText>Parent Organization for Job. Default is &quot;Randstad India Private Limited&quot;</inlineHelpText>
    <label>Organization</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>