force-app/main/default/objects/ORC_Requisition__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <description>Concatenation of City, State and Country</description>
    <inlineHelpText>Combination of Job.Billing City &amp; Job.Billing State &amp; Job.Billing Country</inlineHelpText>
    <label>Primary Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>