force-app/main/default/objects/ORC_Requisition__c/fields/Primary_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Location__c</fullName>
    <description>Indicates the city in which this job posting is located</description>
    <inlineHelpText>Indicates the city in which this job posting is located.Pulled from Job.Billing City</inlineHelpText>
    <label>Primary Work Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>