force-app/main/default/objects/ORC_Requisition__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <description>Email of the Recruiter assigned on the Job</description>
    <inlineHelpText>Email of the Recruiter assigned on the Job. Pulled from Job.Responsible Recruiter</inlineHelpText>
    <label>Recruiter</label>
    <required>true</required>
    <type>Email</type>
</CustomField>