force-app/main/default/objects/ORC_Requisition__c/fields/Recruiting_Type__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Type__c</fullName>
    <defaultValue>&quot;Core (Employee)&quot;</defaultValue>
    <description>Employment Type on the Job. Default is &apos;Core(Employee)&apos;</description>
    <inlineHelpText>Employment Type on the Job. Default is &apos;Core(Employee)&apos;</inlineHelpText>
    <label>Recruiting Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>