force-app/main/default/objects/ORC_Requisition__c/fields/Related_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Job Record related to Requisition</description>
    <inlineHelpText>Job Record related to Requisition</inlineHelpText>
    <label>Related Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Requisitions</relationshipLabel>
    <relationshipName>Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>