force-app/main/default/objects/ORC_Requisition__c/fields/Requisition_Title__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Title__c</fullName>
    <description>Job Title from the Related Job</description>
    <inlineHelpText>Job Title from the Related Job</inlineHelpText>
    <label>Requisition Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>