force-app/main/default/objects/ORC_Requisition__c/fields/Requisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Type__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <description>Type of Requisition Record. Default Value = &quot;Standard&quot;</description>
    <inlineHelpText>Type of Requisition Record. Default Value = &quot;Standard&quot;</inlineHelpText>
    <label>Requisition Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>