force-app/main/default/objects/ORC_Requisition__c/fields/SalesForce_ID__c.field-meta.xml
<CustomField>
    <fullName>SalesForce_ID__c</fullName>
    <description>Salesforce Candidate ID. Derived from Job.Engagement.Placed Candidate ID</description>
    <inlineHelpText>Salesforce Candidate ID. Derived from Job.Engagement.Placed Candidate ID</inlineHelpText>
    <label>SalesForce ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>