force-app/main/default/objects/ORC_Requisition__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <description>Job&apos;s Sub Vertical.Pulled from Job.Sub Vertical field</description>
    <inlineHelpText>Job&apos;s Sub Vertical.Pulled from Job.Sub Vertical field</inlineHelpText>
    <label>Sub Vertical</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>