force-app/main/default/objects/ORC_Requisition__c/fields/Tentative_DOJ__c.field-meta.xml
<CustomField>
    <fullName>Tentative_DOJ__c</fullName>
    <description>Tentative Date of Joining</description>
    <inlineHelpText>Tentative Date of Joining</inlineHelpText>
    <label>Tentative DOJ</label>
    <required>true</required>
    <type>Date</type>
</CustomField>