force-app/main/default/objects/ORC_Requisition__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <defaultValue>&quot;Job&quot;</defaultValue>
    <description>Specifies the name of the entity the Requisition is related to. The default value is &apos;Job&apos;.</description>
    <inlineHelpText>Specifies the name of the entity the Requisition is related to. The default value is &apos;Job&apos;.</inlineHelpText>
    <label>Use</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>