force-app/main/default/objects/ORC_Requisition__c/fields/Vacancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Type__c</fullName>
    <defaultValue>&quot;Expansion&quot;</defaultValue>
    <description>Default Value = &quot;Expansion&quot;</description>
    <inlineHelpText>Default Value = &quot;Expansion&quot;</inlineHelpText>
    <label>Vacancy Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>