force-app/main/default/objects/ORC_Requisition__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Job&apos;s Vertical.Pulled from Job.Vertical field</description>
    <inlineHelpText>Job&apos;s Vertical.Pulled from Job.Vertical field</inlineHelpText>
    <label>Vertical</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>