force-app/main/default/objects/ORC_Requisition__c/fields/Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Type__c</fullName>
    <defaultValue>&quot;Employee&quot;</defaultValue>
    <description>Default = &quot;Employee&quot;</description>
    <inlineHelpText>Default = &quot;Employee&quot;</inlineHelpText>
    <label>Worker Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>